[gd_scene load_steps=18 format=2]

[ext_resource path="res://Pages/Controls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/LockPick.png" type="Texture" id=2]
[ext_resource path="res://Assets/PaperClip.png" type="Texture" id=3]
[ext_resource path="res://Assets/LetterOpener.png" type="Texture" id=4]
[ext_resource path="res://Pages/LockPick.gd" type="Script" id=5]
[ext_resource path="res://Assets/XoloniumSpecial.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/neg1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sounds/Break.ogg" type="AudioStream" id=8]
[ext_resource path="res://Util/SoundEffect.gd" type="Script" id=9]
[ext_resource path="res://Assets/XoloniumNormal.tres" type="DynamicFont" id=10]

[sub_resource type="Animation" id=7]
resource_name = "Hidden"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/PaperClip:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/LetterOpener:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Anims/KeyHole/PaperClip:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Anims/KeyHole/PaperClip:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Anims/KeyHole/LetterOpener:flip_v")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "LetterJiggle"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/LetterOpener:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 4.0, 1.0, 3.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "LetterJiggle2"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/LetterOpener:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 8.0, 2.0, 6.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "LetterJiggle3"
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/LetterOpener:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 24.0, 6.0, 18.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/LetterOpener:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/PaperClip:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anims/KeyHole/PaperClip:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Anims/KeyHole/LetterOpener:flip_v")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Anims/KeyHole/PaperClip:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/PaperClip:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, 42 ), Vector2( -7, 10.5 ), Vector2( -7, 8 ), Vector2( -7, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 650, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/PaperClip:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Success"
tracks/0/type = "value"
tracks/0/path = NodePath("Anims/KeyHole/LetterOpener:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anims/KeyHole/LetterOpener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anims/KeyHole/LetterOpener:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anims/KeyHole/PaperClip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Anims/KeyHole/PaperClip:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, 50 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Anims/KeyHole/LetterOpener:flip_v")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false ]
}

[node name="LockPick" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -59.0
margin_right = 1280.0
margin_bottom = 661.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Controls" parent="." instance=ExtResource( 1 )]

[node name="Anims" type="AnimationPlayer" parent="."]
autoplay = "Hidden"
anims/Hidden = SubResource( 7 )
anims/LetterJiggle = SubResource( 1 )
anims/LetterJiggle2 = SubResource( 3 )
anims/LetterJiggle3 = SubResource( 4 )
anims/RESET = SubResource( 2 )
anims/Start = SubResource( 6 )
anims/Success = SubResource( 5 )

[node name="KeyHole" type="Node2D" parent="Anims"]
position = Vector2( 640, 270 )

[node name="PaperClip" type="Sprite" parent="Anims/KeyHole"]
rotation = 3.14159
scale = Vector2( 6.666, 6.666 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -7, 0 )
flip_h = true
flip_v = true

[node name="LetterOpener" type="Sprite" parent="Anims/KeyHole"]
scale = Vector2( 6.666, 6.666 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -3 )

[node name="Timer" type="Timer" parent="."]

[node name="Countdown" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -342.0
margin_right = 334.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 0.654902, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Lock Reset: 10.0s"
align = 1
valign = 1

[node name="update_interval" type="Timer" parent="Countdown"]
wait_time = 0.2
autostart = true

[node name="negparticle" type="CPUParticles2D" parent="Countdown"]
position = Vector2( 475, 53 )
emitting = false
amount = 1
one_shot = true
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 40, 1 )
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 600 )
initial_velocity = 200.0
initial_velocity_random = 0.2
scale_amount = 6.0

[node name="Break" type="AudioStreamPlayer" parent="Countdown"]
stream = ExtResource( 8 )
volume_db = -7.0
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="."]
margin_left = 228.0
margin_top = 616.0
margin_right = 549.0
margin_bottom = 722.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 10.0
margin_right = -17.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 10 )
text = "A/D to rotate
S to try picking lock"

[connection signal="animation_finished" from="Anims" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="Anims" to="." method="_on_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Countdown/update_interval" to="." method="_on_update_interval_timeout"]
